--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.133",
     "@types/node": "^20.11.17",
     "aws-cdk": "^2.127.0",
     "aws-cdk-lib": "^2.127.0",
     "constructs": "^10.3.0",
+    "esbuild": "^0.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/uuid": "^9.0.8",
+    "uuid": "^9.0.1"
   }
 }
