--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.514.0",
     "@aws-sdk/client-s3": "^3.514.0",
+    "@aws-sdk/util-dynamodb": "^3.515.0",
     "@types/uuid": "^9.0.8",
     "uuid": "^9.0.1"
   }
