--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^5.6.10",
     "@aws-sdk/client-dynamodb": "^3.514.0",
     "@aws-sdk/client-s3": "^3.514.0",
     "@aws-sdk/util-dynamodb": "^3.515.0",
     "@types/uuid": "^9.0.8",
+    "aws-amplify": "^5.3.16",
     "uuid": "^9.0.1"
   }
 }
