--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^5.6.10",
+    "@aws-sdk/client-cognito-identity": "^3.525.0",
+    "@aws-sdk/credential-providers": "^3.525.0",
     "aws-amplify": "^5.3.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
