--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/auth": "^5.6.10",
     "@aws-sdk/client-cognito-identity": "^3.525.0",
+    "@aws-sdk/client-s3": "^3.525.0",
     "@aws-sdk/credential-providers": "^3.525.0",
     "aws-amplify": "^5.3.16",
     "react": "^18.2.0",
